# introducing

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  makefile  pyproject.toml  sharpdev.yml
.circleci/: config.yml
clients/dotnet/: .gitignore  README.md  makefile
clients/dotnet/IntroClient/: IntroClient.csproj  Program.cs  sharpdev.yml
clients/dotnet/IntroClient/Protos/: service.proto
clients/python/: README.md  makefile  pyproject.toml  sharpdev.yml
clients/python/intro_client/: __main__.py
clients/python/intro_client/proto/: .gitignore
docker/: Dockerfile  back.Dockerfile  back.docker-compose.yml  dev.Dockerfile  docker_entrypoint.sh  flask.Dockerfile  grpc_entrypoint.sh
frontend/introduction_frontend/: Dockerfile  package-lock.json  package.json
frontend/introduction_frontend/public/: index.html
frontend/introduction_frontend/sharpnet/: nginx.conf
frontend/introduction_frontend/src/: .eslintrc.json  .gitignore  App.js
frontend/introduction_frontend/src/views/pages/: IdentificationCard.js  LandingPage.js
introducing/: app.py  constants.py  faces.py  flask_app.py  grpc_app.py  location.py  service.proto  text.py  urls.py  wsgi.py
introducing/static/: default.html
proto/: service.proto
sample/: example.json
sharpnet/: nginx.conf  nginx.dev.conf
tests/: test_face.py  test_flask_demo.py  test_general.py  test_introducing.py  test_location.py  test_text.py
