[tool.poetry]
name = "introducing"
version = "0.1.0"
description = ""
authors = ["Sharpz7 <adam@mcaq.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
requests = "^2.28.0"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
