[tool.poetry]
name = "introducing"
version = "0.1.0"
description = ""
authors = ["Sharpz7 <adam@mcaq.me>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
requests = "^2.28.0"
requests-html = "^0.10.0"
names = "^0.3.0"
gunicorn = "^20.1.0"
grpcio-tools = "^1.47.0"
grpcio = "^1.47.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.14.3"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
