[tool.poetry]
name = "Introducing GRPC Client"
version = "0.1.0"
description = ""
authors = ["Sharpz7 <adam@mcaq.me>"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.46.3"
grpcio-tools = "^1.46.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
